Add database support.

--- a/templates/topic_form.hbs
+++ b/templates/topic_form.hbs
@@ -8,7 +8,7 @@
         <div class="entry">
             <h1>{{title}}</h1>
             <div class="body">
-                <form method="post">
+                <form method="post" action="/topic">
                     <div> <label for="name">暱稱：</label> <input type="text" name="name"/> </div>
                     <div> <label for="title">標題：</label> <input type="text" name="title"/> </div>
                     <div> <label for="content">內容：</label> </div>
