--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -8,7 +8,8 @@
         <div class="entry">
             <h1>{{title}}</h1>
             <div class="body">
-                {{body}}
+                {{index_content}}
+                {{posts}}
             </div>
         </div>
     </body>
