--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -8,16 +8,23 @@
         <div class="entry">
             <h1>{{title}}</h1>
             <div class="body">
-                {{index_content}}
-                {{#each posts}}
-                <div class="post">
-                    <div class="name">暱稱：{{name}}</div>
-                    <div class="title">標題：{{title}}</div>
-                    <div class="content">
-                        {{content}}
-                    </div>
+                <div class="announcement">
+                    {{announcement}}
                 </div>
-                {{/each}}
+                <nav class="nav">
+                    <a href="topic_form">新增留言</a>
+                </nav>
+                <div class="posts">
+                    {{#each posts}}
+                    <div class="post">
+                        <div class="name">暱稱：{{name}}</div>
+                        <div class="title">標題：{{title}}</div>
+                        <div class="content">
+                            {{content}}
+                        </div>
+                    </div>
+                    {{/each}}
+                </div>
             </div>
         </div>
     </body>
