--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -22,6 +22,7 @@
                         <div class="content">
                             {{content}}
                         </div>
+                        <div class="reply_button"><a href="">回覆本篇留言</a></div>
                     </div>
                     {{/each}}
                 </div>
