--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Rust GuestBook</title>
+        <title>Rust 留言板</title>
+        <link href="css/main.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <div class="entry">
