Add static for css.

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Rust 留言板</title>
-        <link href="css/main.css" rel="stylesheet" type="text/css" />
+        <link href="static/css/main.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <div class="entry">
