Modify the index template.

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -18,8 +18,7 @@
                 <div class="posts">
                     {{#each posts}}
                     <div class="post">
-                        <div class="name">暱稱：{{name}}</div>
-                        <div class="title">標題：{{title}}</div>
+                        <div class="title">{{name}}：{{title}}</div>
                         <div class="content">
                             {{content}}
                         </div>
