--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -16,13 +16,13 @@
                     <a href="topic_form">新增留言</a>
                 </nav>
                 <div class="posts">
-                    {{#each posts}}
+                    {{#each postCollections}}
                     <div class="post">
-                        <div class="title">{{name}}：{{title}}</div>
+                        <div class="title">{{topic.name}}：{{topic.title}}</div>
                         <div class="content">
-                            {{content}}
+                            {{topic.content}}
                         </div>
-                        <div class="reply_button"><a href="reply_form/{{id}}">回覆本篇留言</a></div>
+                        <div class="reply_button"><a href="reply_form/{{topic.id}}">回覆本篇留言</a></div>
                     </div>
                     {{/each}}
                 </div>
