--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -16,7 +16,7 @@
                     <a href="topic_form">新增留言</a>
                 </nav>
                 <div class="posts">
-                    {{#each postCollections}}
+                    {{#each posts}}
                     <div class="post">
                         <div class="title">{{topic.name}}：{{topic.title}}</div>
                         <div class="content">
