--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -22,7 +22,7 @@
                         <div class="content">
                             {{topic.content}}
                             <div class="reply">
-                            {{#each topic.reply}}
+                            {{#each reply}}
                                 <div class="post">
                                     <div class="title">{{name}}：{{title}}</div>
                                     <div class="content">
