--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -27,11 +27,13 @@
                                     <div class="title">{{name}}：{{title}}</div>
                                     <div class="content">
                                         {{content}}
-                                     </div>
+                                    </div>
+                                    <div class="time">留言於 {{created_time}}</div>
                                 </div>
                             {{/each}}
                             </div>
                         </div>
+                        <div class="time">留言於 {{created_time}}</div>
                         <div class="reply_button"><a href="reply_form/{{topic.id}}">回覆本篇留言</a></div>
                     </div>
                     {{/each}}
