Fix template topic.created_time.

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -33,7 +33,7 @@
                             {{/each}}
                             </div>
                         </div>
-                        <div class="time">留言於 {{created_time}}</div>
+                        <div class="time">留言於 {{topic.created_time}}</div>
                         <div class="reply_button"><a href="reply_form/{{topic.id}}">回覆本篇留言</a></div>
                     </div>
                     {{/each}}
