--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,7 +17,8 @@ a:hover, a:active{
 }
 
 .post{
-    width: 300px;
+    width: 80%;
+    max-width: 600px;
     margin: 30px auto;
     padding: 10px;
     text-align: left;
@@ -40,6 +41,7 @@ a:hover, a:active{
 
 .reply .post{
     background-color: #F2E1EF;
+    width: 100%;
 }
 
 .reply .post .content{
